k3s/sol/components/nextcloud/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nextcloud-db-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: nextcloud-postgresql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nextcloud
      ports:
        - port: 5432
  policyTypes:
    - Ingress
